samples/_failures_safe/1761362726_7a7073_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a580f985.c: In function ‘main’:
./samples/SAFE/__tmp_a580f985.c:154:17: error: expected declaration or statement at end of input
  154 |                 }
      |                 ^
./samples/SAFE/__tmp_a580f985.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a580f985.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a580f985.c:154:17: error: expected declaration or statement at end of input
